SERVER-7036 do not insert NULs in abbreviated long logged lines

Pass 'false' for includeEndingNull in two calls to BufBuilder::appendStr
to we don't insert null terminators in the middle of an output buffer.